# multitenancy-fastAPI

./: .env  Dockerfile  README.md  docker-compose.yaml  flyway.conf  pyproject.toml  requirements.txt  tmp_Dockerfile  tmp_script.sh
app/: crud.py  database.py  main.py  middleware.py  models.py  route.py  route_dependancy.py  schemas.py
db/migration/: V1__init.sql  V2__insert_dummy_data.sql
